--- a/PSET/2018/ps1/tex/ps1.tex
+++ b/PSET/2018/ps1/tex/ps1.tex
@@ -11,6 +11,8 @@
 \usepackage{listings}
 \usepackage{setspace}
 \usepackage{float}
+\usepackage{mathtools}
+\usepackage{hyperref}
 \definecolor{Code}{rgb}{0,0,0}
 \definecolor{Decorators}{rgb}{0.5,0.5,0.5}
 \definecolor{Numbers}{rgb}{0.5,0,0}
