--- a/PSET/2018/ps1/tex/01-linreg/03-gda-sol.tex
+++ b/PSET/2018/ps1/tex/01-linreg/03-gda-sol.tex
@@ -1,2 +1,25 @@
 \begin{answer}
+    \begin{align*}
+        p(y = 1\mid x; \phi, \mu_0, \mu_1, \Sigma)&=\frac{p(x\mid y=1)p(y=1)}{p(x)} \\
+        &=\frac{p(x\mid y=1)p(y=1)}{p(x\mid y=1)p(y=1) + p(x\mid y=0)p(y=0)} \\
+        &=\frac{1}{1 + \frac{p(x\mid y=0)p(y=0)}{p(x\mid y=1)p(y=1)}} \\
+        &=\frac{1}{1 + \frac{p(x\mid y=0)}{p(x\mid y=1)} \frac{p(y=0)}{p(y=1)}} \\
+        &=\frac{1}{1 + \frac{p(x\mid y=0)}{p(x\mid y=1)}\frac{1-\phi}{\phi}} \\
+        &=\frac{1}{1 +\exp( -\frac{1}{2} \left[(x-\mu_0)^T \Sigma^{-1} (x-\mu_0) - (x-\mu_1)^T \Sigma^{-1} (x-\mu_1) \right]+ \log(\frac{1-\phi}{\phi}))} \\
+    \end{align*}
+    We can distribute out the inside of the $\exp()$ to get 
+    \begin{align*}
+    &(x-\mu_0)^T \Sigma^{-1} (x-\mu_0) - (x-\mu_1)^T \Sigma^{-1} (x-\mu_1)\\
+    &=\cancel{x^T\Sigma^{-1}  x} - x^T\Sigma^{-1} \mu_0 - \mu_0^T\Sigma^{-1}  x +  \mu_0^T\Sigma^{-1} \mu_0 - (\cancel{x^T\Sigma^{-1}  x} - x^T\Sigma^{-1} \mu_1 - \mu_1^T\Sigma^{-1}  x +  \mu_1^T\Sigma^{-1} \mu_1)\\
+    \shortintertext{Since $a^TBc$ is a scalar, we can freely add or drop the transpose: $a^TBc = (a^TBc)^T = c^TBa$}
+        &=2 \mu_1^T\Sigma^{-1}  x -2 \mu_0^T\Sigma^{-1}  x +  \mu_0^T\Sigma^{-1} \mu_0 -  \mu_1^T\Sigma^{-1} \mu_1\\
+        &=2 (\mu_1-\mu_0)^T\Sigma^{-1}  x +  \mu_0^T\Sigma^{-1} \mu_0 -  \mu_1^T\Sigma^{-1} \mu_1
+    \end{align*}
+    Plugging this back into the $\exp()$ expression:
+    \begin{align*}
+    p(y = 1\mid x; \phi, \mu_0, \mu_1, \Sigma)&=\frac{1}{1 +\exp( -\frac{1}{2} \left[ 2 (\mu_1-\mu_0)^T\Sigma^{-1}  x +  \mu_0^T\Sigma^{-1} \mu_0 -  \mu_1^T\Sigma^{-1} \mu_1\right]+ \log(\frac{1-\phi}{\phi}))} \\
+    &=\frac{1}{1 +\exp( - \left[(\mu_1-\mu_0)^T\Sigma^{-1}  x  +\frac{1}{2}   \mu_0^T\Sigma^{-1} \mu_0 - \frac{1}{2}  \mu_1^T\Sigma^{-1} \mu_1+ \log(\frac{1-\phi}{\phi}) \right]))} \\
+    \shortintertext{If we set $\theta =(\mu_1-\mu_0)^T\Sigma^{-1}  $ and $\theta_0 =\frac{1}{2}   \mu_0^T\Sigma^{-1} \mu_0 - \frac{1}{2}  \mu_1^T\Sigma^{-1} \mu_1+ \log(\frac{1-\phi}{\phi})  $}
+    &=\frac{1}{1 + \exp(-(\theta^T x + \theta_0))}
+    \end{align*}
 \end{answer}
