--- a/PSET/2018/ps1/tex/01-linreg/04-gda-ll-sol.tex
+++ b/PSET/2018/ps1/tex/01-linreg/04-gda-ll-sol.tex
@@ -1,2 +1,30 @@
 \begin{answer}
+    \begin{eqnarray*}
+        \ell(\phi, \mu_{0}, \mu_1, \Sigma) 
+        &=& \sum_{i=1}^m \log p(x^{(i)} | y^{(i)}; \mu_{0}, \mu_1, \Sigma) + \log p(y^{(i)};
+        \phi)\\
+        &=& \sum_{i=1}^m [ \log \frac{1}{\sqrt{2\pi} \sigma} \\
+        &&-\frac{1}{2\sigma^2}(1\{y^{(i)} = {1}\})((x^{(i)}-\mu_{1})^2 + \log (\phi))\\
+        && -\frac{1}{2\sigma^2}(1\{y^{(i)} = {0}\})((x^{(i)}-\mu_{0})^2 + \log (1-\phi))]
+    \end{eqnarray*}
+    \begin{eqnarray*}
+        \frac{\partial\ell}{\partial\phi}&=& -\frac{1}{2\sigma^2}(\sum_{i=1}^m \frac{1\{y^{(i)} = {1}\}}{\phi} + \sum_{i=1}^m \frac{1\{y^{(i)} = {0}\}}{1-\phi}) = 0\\
+        &\rightarrow& \sum_{i=1}^m \frac{y^{(i)}}{\phi} - \sum_{i=1}^m \frac{(1-y^{(i)})}{1-\phi} = 0 \text{\ \ \ becuase $y\in\{0,1\}$}\\
+        &\rightarrow& \sum_{i=1}^m \frac{y^{(i)}}{\phi} - \sum_{i=1}^m \frac{(1-y^{(i)})}{1-\phi} = 0\\
+        &\rightarrow& \sum_{i=1}^m \frac{y^{(i)}}{\phi} =  \sum_{i=1}^m \frac{(1-y^{(i)})}{1-\phi}\\
+        &\rightarrow& (1-\phi)\sum_{i=1}^m y^{(i)} =  \phi\sum_{i=1}^m (1-y^{(i)})\\
+        &\rightarrow& \sum_{i=1}^m y^{(i)} -\phi\sum_{i=1}^m y^{(i)} = m\phi - \phi\sum_{i=1}^m y^{(i)}\\
+        &\rightarrow& \sum_{i=1}^m y^{(i)} = m\phi \\
+        &\rightarrow& \phi = \frac{1}{m} \sum_{i=1}^m y^{(i)} = \frac{1}{m} \sum_{i=1}^m 1\{y^{(i)} = {1}\}\\
+    \end{eqnarray*}
+
+    \begin{eqnarray*}
+        \frac{\partial\mu_1}{\partial\phi}&=& \frac{1}{\sigma^2}(\sum_{i=1}^m (1\{y^{(i)} = {1}\})((x^{(i)}-\mu_{1})) = 0\\
+        &\rightarrow& \sum_{i=1}^m 1\{y^{(i)} = {1}\}x^{(i)}-\sum_{i=1}^m 1\{y^{(i)} = {1}\}\mu_{1} = 0\\
+        &\rightarrow& \mu_{1} = \frac{\sum_{i=1}^m 1\{y^{(i)} = {1}\}x^{(i)}}{\sum_{i=1}^m 1\{y^{(i)} = {1}\}}\\
+    \end{eqnarray*}
+
+    steps for proving $\mu_0$ is the same as steps for $\mu_1$ after replacing $\mu_1$ with  $\mu_0$ and $1\{y^{(i)} = {1}\}$ with $1\{y^{(i)} = {0}\}$
+
+    Skipping $\Sigma$ because doing algebra is boring now
 \end{answer}
