--- a/PSET/2018/ps1/tex/02-posonly/02-estimate-alpha-sol.tex
+++ b/PSET/2018/ps1/tex/02-posonly/02-estimate-alpha-sol.tex
@@ -1,2 +1,7 @@
-\begin{answer}
+\begin{answer}\\
+    \begin{align*}
+        h(x(i)) &\approx p(y^{(i)}= 1|x^{(i)})\\
+        &\approx p(t^{(i)}= 1|x^{(i)}) \alpha\\
+        &\approx \alpha \text{\ \ \ \ \ \ Since $p(t(i)= 1|x(i)) = 1$ }\\
+    \end{align*}
 \end{answer}
