problem set 1 question 4

--- a/PSET/2018/ps1/tex/03-poisson/01-exponential-sol.tex
+++ b/PSET/2018/ps1/tex/03-poisson/01-exponential-sol.tex
@@ -1,2 +1,10 @@
 \begin{answer}
+    \begin{equation*}
+        p(y; \lambda) = \frac{1}{y!}e^{-\lambda}e^{\log(\lambda^y)}=\frac{1}{y!}e^{\log(\lambda)y-\lambda}.
+      \end{equation*}
+
+    $b(y) = \frac{1}{y!}$\\
+    $\eta = \log(\lambda)$\\
+    $T(y)=y$\\
+    $a(\eta)=\lambda=e^\eta$
 \end{answer}
