--- a/PSET/2018/ps1/tex/03-poisson/02-response-fn-sol.tex
+++ b/PSET/2018/ps1/tex/03-poisson/02-response-fn-sol.tex
@@ -1,2 +1,7 @@
 \begin{answer}
+    \begin{align*}
+        g(\eta) &= E[y;\eta]\\
+        &=\lambda\\
+        &=e^\eta\\
+    \end{align*}
 \end{answer}
