--- a/PSET/2018/ps1/tex/05-weighted/02-impl-sol.tex
+++ b/PSET/2018/ps1/tex/05-weighted/02-impl-sol.tex
@@ -1,2 +1,7 @@
 \begin{answer}
+    Underfitting
+    \begin{figure}[htbp]
+        \centering
+        \includegraphics{../src/output/p05b_lwr.png}
+    \end{figure}
 \end{answer}
