--- a/PSET/2018/ps1/tex/05-weighted/03-tau-sol.tex
+++ b/PSET/2018/ps1/tex/05-weighted/03-tau-sol.tex
@@ -1,2 +1,39 @@
 \begin{answer}
+    graphs:
+    \begin{figure}[h]
+        \begin{subfigure}[b]{0.5\linewidth}
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_0.03.png}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.5\linewidth}
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_0.05.png}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.5\linewidth}
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_0.1.png}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.5\linewidth}
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_0.5.png}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.5\linewidth}
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_1.0.png}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.5\linewidth}
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_10.0.png}
+        \end{subfigure}
+    \end{figure}
+
+    $tau = 0.05$ was best
+    \pagebreak
+    \begin{figure}[h]
+            \centering
+            \includegraphics[width=\linewidth]{../src/output/p05c_tau_0.05_final.png}
+    \end{figure}
+    
+    
+    
 \end{answer}
